@@ -53,6 +53,8 @@ extern "C"
     extern int SetPlayMode(int);
     /// C plugin get current system time counter
     extern int64_t GetSTC(void);
+    /// C plugin get video stream size and aspect
+    extern void GetVideoSize(int *, int *, double *);
     /// C plugin set trick speed
     extern void TrickSpeed(int);
     /// C plugin clears all video and audio data from the device
